<resources>
    <string name="app_name">BusApp</string>

    <string name="description_main1">SỞ GIAO THÔNG VẬN TẢI THÀNH PHỐ HỒ CHÍ MINH</string>
    <string name="description_main2">TRUNG TÂM QUẢN LÝ VÀ ĐIỀU HÀNH VẬN TẢI HÀNH KHÁCH CÔNG CỘNG</string>
    <string name="description_main3">Tìm kiếm xe buyt ở TP.HCM</string>
    <string name="title_tuyen">TUYẾN</string>
    <string name="hint_search">Nhập mã hoặc tên tuyến</string>
    <string name="search">Tìm</string>
    <string name="item_id">ID</string>
    <string name="item_name">Name</string>
    <string name="search_view">Tìm kiếm</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="item_menu_tuyen">Danh sách tuyến</string>
    <string name="item_menu_timduong">Tìm đường</string>
    <string name="item_menu_nhantin">Nhắn tin phản hồi</string>
    <string name="item_menu_xemsau">Xem sau</string>
    <string name="item_menu_ganday">Tin nhắn gần đây</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="view_later">XEM SAU</string>

    <string name="recipident">Người nhận</string>
    <string name="subjects">Chủ đề</string>

    <string name="messages">Tin nhắn</string>
    <string name="send">Gửi</string>
    <string name="contact">LIÊN HỆ</string>
    <string name="history">LỊCH SỬ</string>

    <string name="admin">manager.bustphcm@gmail.com</string>

    <string name="title_item_subject">Chủ đề</string>
    <string name="title_item_date">Ngày gửi tin nhắn</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_origin">Nhập điểm xuất phát</string>
    <string name="title_destination">Nhập điểm đến</string>

    <string name="number_km">0 km</string>
    <string name="title_time">0 min</string>
</resources>
