<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.busapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tuyen"
        android:textStyle="bold"
        android:id="@+id/textViewTuyen"
        android:textSize="25sp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTuyen"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:id="@+id/editTextSearch"
            android:hint="@string/hint_search"/>
        <Button
            android:id="@+id/btnTim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/listViewBus"
        android:layout_below="@id/linearLayout">

    </ListView>

</RelativeLayout>
